--- a/FF/Onsdag.html
+++ b/FF/Onsdag.html
@@ -5,25 +5,24 @@
     <title>Onsdag 04/11</title>
     <link type="text/css" rel="stylesheet" href="StylesheetFreakyFriday.css">
     <link type="text/css" rel="stylesheet" href="dynamisk.css">
-    <link type="text/css" rel="stylesheet" href="nav-bar-horisontal.css">
     <meta name="viewport" content="width=device-width, initial-scale =1.0">
 </head>
 <body>
-<ul class="menu horisontal">
-    <li> <a href="#meg" style="color: lightcoral"> Om meg</a> </li>
-    <li> <a href="#blogg" style="color: lightcoral"> Mine blogginnlegg</a> </li>
-    <li> <a href="#fav" style="color: lightcoral"> Mine favorittnettsider</a> </li>
+<ul class="horisontal menu">
+    <li> <a href="#meg" style="color: black"> Om meg</a> </li>
+    <li> <a href="#blogg" style="color: black"> Mine blogginnlegg</a> </li>
+    <li> <a href="#fav" style="color: black"> Mine favorittnettsider</a> </li>
 
 </ul>
 
 <div class="col-small-100 bak" style="background-image: background-image: url("article_topimage_shutterstock_1029842671")">
-<h1 style="color: deepskyblue"> Velkommen til min <a style="color: deeppink"> blogg</a> </h1>
+<h1  class="velkommen" style="color: white"> <a> Velkommen til min  blogg </a></h1>
 </div>
 
 
-<div  class="col-small-60"> <h1> <a href="FreakyFriday.html"> <-- Tilbake </a></h1>
-    <h2 > Hva jeg gjorde på onsdag</h2>
-    <p > onsdag 04/11 </p>
+<div  class="col-small-60"> <div class="boks" <h1 class="boks"> <a href="FreakyFriday.html"> < Tilbake </a></h1></div>
+    <h2 class="velkommen"> Hva jeg gjorde på onsdag</h2>
+    <p class="velkommen"> onsdag 04/11 </p>
     <p> På onsdag tenkte jeg på hest samtidig som jeg gjorde yoga. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
         The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
@@ -31,13 +30,14 @@
     <p> Slik mediterte jeg.</p>
 </div>
 <div class="col-small-40 col-small-20">
-    <h1 id="meg" style="color: hotpink"> Om meg</h1>
-    <p> Jeg er 15 år gammel og elsker hest. Foreldrene mine er veldig snille og jeg er veldig glad i de.</p>
-    <img height="163" src="giphy.gif" alt="Hest som løper på regnbue" class="gif">
+    <h1 id="meg" style="color: brown"> Om meg</h1>
+    <p> Jeg er 15 år gammel og elsker hest. Foreldrene mine er veldig snille og jeg er veldig glad i de. Her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer her er mer tekst her er mer tekst her er mer tekst her her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst er mer tekst her er mer tekst her er mer tekst tekst her er mer tekst</p>
+    <img  src="Shetland_pony_moult1.jpg" alt="Hest som løper på regnbue" class="gif">
+    <p> Ponni er betegnelse på en småvokst hestetype med en mankehøyde på opp til 148 cm. Ponnier deles inn i kategoriene 1-4, hvor kategori 1 er de høyeste. </p>
 </div>
-<div class="col-small-40 col-small-20"> <h1 style="color: hotpink"> Mine favorittnettsider</h1>
+<div id="fav" class="col-small-40 col-small-20"> <h1 style="color: brown"> Mine favorittnettsider</h1>
     <h2> Her er en liste over mine favorittnettsider</h2>
-    <ul>
+    <ul class="vanlig">
         <li> <a href="https://no.wikipedia.org/wiki/Hest">Wikipedia om hest</a> </li>
         <li> <a href="https://snl.no/hest"> SNL om hest </a></li>
         <li> <a href="https://www.google.com/search?q=hest&tbm=isch&ved=2ahUKEwjMoKe1suTsAhXVvSoKHZUWAkMQ2-cCegQIABAA&oq=hest&gs_lcp=CgNpbWcQA1AAWABgmpsBaABwAHgAgAEAiAEAkgEAmAEAqgELZ3dzLXdpei1pbWc&sclient=img&ei=BUOgX4yKG9X7qgGVrYiYBA&bih=366&biw=538&client=safari"> Bilder av hester på google.com </a> </li>
