--- a/FF/Torsdagg.html
+++ b/FF/Torsdagg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tirsdag 03/11</title>
+    <title>Torsdag 05/11</title>
     <link type="text/css" rel="stylesheet" href="StylesheetFreakyFriday.css">
     <link type="text/css" rel="stylesheet" href="dynamisk.css">
     <meta name="viewport" content="width=device-width, initial-scale =1.0">
@@ -21,13 +21,13 @@
 
 
 <div  class="col-small-60"> <div class="boks" <h1 class="boks"> <a href="FreakyFriday.html"> < Tilbake </a></h1></div>
-<h2 class="velkommen"> Hva jeg gjorde på tirsdag</h2>
-<p class="velkommen"> Tirsdag 03/11 </p>
-<p> På tirsdag tenkte jeg på hest og jeg ryddet rommet, jeg elsker å rydde rommet. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+<h2 class="velkommen"> Hva jeg gjorde på torsdag</h2>
+<p class="velkommen"> Torsdag 05/11 </p>
+<p> På torsdag gjorde jeg det jeg vanligvis gjør på torsdager.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
     The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-<img height="300" src="soverom-inspirasjon-15.png" alt="Bilde av soverom" class="image">
-<p> Dette er soverommet mitt.</p>
+<img height="300" src="large_21-337837-12-1452177665292.jpg" alt="Smil, det er torsdag" class="image">
+<p> Smil, det er torsdag.</p>
 </div>
 <div class="col-small-40 col-small-20">
     <h1 id="meg" style="color: brown"> Om meg</h1>
