--- a/FF/FreakyFriday.html
+++ b/FF/FreakyFriday.html
@@ -12,43 +12,48 @@
     <li> <a href="#meg" style="color: black"> Om meg</a> </li>
     <li> <a href="#blogg" style="color: black"> Mine blogginnlegg</a> </li>
     <li> <a href="#fav" style="color: black"> Mine favorittnettsider</a> </li>
-
 </ul>
 
 <div class="col-small-100 bak" style="background-image: background-image: url("article_topimage_shutterstock_1029842671")">
-<h1  class="velkommen" style="color: white"> <a> Velkommen til min  blogg </a></h1>
+    <h1  class="velkommen" style="color: white"> <a> Velkommen til min  blogg </a></h1>
 </div>
 
 
 <div  class="col-small-60"> <h1 id="blogg" style="color: brown"> Mine blogginnlegg</h1>
-<h2 style="color: saddlebrown" > Hva jeg gjorde på torsdag</h2>
-<p > Torsdag 05/11 </p>
-<p> På torsdag gjorde jeg det jeg vanligvis gjør på torsdager... <a href="Torsdagg.html"> (Les mer)</a> </p>
-<h2 style="color: saddlebrown;"> Hva jeg gjorde på onsdag</h2>
-<p  > Onsdag 04/11 </p>
-    <p > På onsdag tenkte jeg på hest samtidig som jeg gjorde yoga, les dette blogginnlegget om hvorfor jeg elsker yoga... <a href="Onsdag.html">(Les mer)</a> </p>
-<h2 style="color: saddlebrown"> Hva jeg gjorde på tirsdag</h2>
-<p > Tirsdag 03/11 </p>
-    <p  > På tirsdag tenkte jeg på hest og jeg ryddet rommet, jeg elsker å rydde rommet... <a href="Tirsdag.html"> (Les mer)</a> </p>
-<h2 style="color: saddlebrown"> Hva jeg gjorde på mandag</h2>
-<p > Mandag 02/11 </p>
-    <p  > På mandag tenkte jeg på hest. Jeg handlet også mat, det er viktig for meg å spise sundt... <a href="Mandag.html"> (Les mer)</a> </p>
+    <h2 style="color: saddlebrown" > Torsdag - 05/11/2020</h2>
+    <p class="tittel"> Skogtur </p>
+    <p> På torsdag gjorde jeg det jeg vanligvis gjør på torsdager. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="Torsdagg.html"> (Les mer)</a> </p>
 
+    <h2 style="color: saddlebrown;"> Onsdag - 04/11/2020 </h2>
+    <p class="tittel"> Yoga </p>
+    <p > På onsdag tenkte jeg på hest samtidig som jeg gjorde yoga, les dette blogginnlegget om hvorfor jeg elsker yoga. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="Onsdag.html">(Les mer)</a> </p>
+
+    <h2 style="color: saddlebrown"> Tirsdag - 03/11/2020</h2>
+    <p class="tittel"> Rydding </p>
+    <p  > På tirsdag tenkte jeg på hest og jeg ryddet rommet, jeg elsker å rydde rommet. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="Tirsdag.html"> (Les mer)</a> </p>
+
+
+    <h2 style="color: saddlebrown"> Mandag - 02/11/2020</h2>
+    <p class="tittel"> Trening </p>
+    <p  > På mandag tenkte jeg på hest. Jeg handlet også mat, det er viktig for meg å spise sundt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="Mandag.html"> (Les mer)</a> </p>
 </div>
+
 <div class="col-small-40 col-small-20">
     <h1 id="meg" style="color: brown"> Om meg</h1>
-    <p> Jeg er 15 år gammel og elsker hest. Foreldrene mine er veldig snille og jeg er veldig glad i de. Her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer her er mer tekst her er mer tekst her er mer tekst her her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst er mer tekst her er mer tekst her er mer tekst tekst her er mer tekst</p>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <img  src="Shetland_pony_moult1.jpg" alt="Hest som løper på regnbue" class="gif">
     <p> Ponni er betegnelse på en småvokst hestetype med en mankehøyde på opp til 148 cm. Ponnier deles inn i kategoriene 1-4, hvor kategori 1 er de høyeste. </p>
 </div>
+
 <div id="fav" class="col-small-40 col-small-20"> <h1 style="color: brown"> Mine favorittnettsider</h1>
-<h2> Her er en liste over mine favorittnettsider</h2>
-<ul class="vanlig">
-    <li> <a href="https://no.wikipedia.org/wiki/Hest">Wikipedia om hest</a> </li>
-    <li> <a href="https://snl.no/hest"> SNL om hest </a></li>
-    <li> <a href="https://www.google.com/search?q=hest&tbm=isch&ved=2ahUKEwjMoKe1suTsAhXVvSoKHZUWAkMQ2-cCegQIABAA&oq=hest&gs_lcp=CgNpbWcQA1AAWABgmpsBaABwAHgAgAEAiAEAkgEAmAEAqgELZ3dzLXdpei1pbWc&sclient=img&ei=BUOgX4yKG9X7qgGVrYiYBA&bih=366&biw=538&client=safari"> Bilder av hester på google.com </a> </li>
-    <li> <a href="https://www.finn.no/bap/forsale/search.html?category=0.77&sub_category=1.77.5190"> Hester på finn.no</a></li>
-</ul>
+<h4> Her er en liste over mine favorittnettsider:</h4>
+
+    <ul class="vanlig">
+        <li> <a href="https://no.wikipedia.org/wiki/Hest">Wikipedia om hest</a> </li>
+        <li> <a href="https://snl.no/hest"> SNL om hest </a></li>
+        <li> <a href="https://www.google.com/search?q=hest&tbm=isch&ved=2ahUKEwjMoKe1suTsAhXVvSoKHZUWAkMQ2-cCegQIABAA&oq=hest&gs_lcp=CgNpbWcQA1AAWABgmpsBaABwAHgAgAEAiAEAkgEAmAEAqgELZ3dzLXdpei1pbWc&sclient=img&ei=BUOgX4yKG9X7qgGVrYiYBA&bih=366&biw=538&client=safari"> Bilder av hester på google.com </a> </li>
+        <li> <a href="https://www.finn.no/bap/forsale/search.html?category=0.77&sub_category=1.77.5190"> Hester på finn.no</a></li>
+    </ul>
 </div>
 </body>
 </html>
