--- a/FF/Torsdagg.html
+++ b/FF/Torsdagg.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,12 +32,13 @@
 </div>
 <div class="col-small-40 col-small-20">
     <h1 id="meg" style="color: brown"> Om meg</h1>
-    <p> Jeg er 15 år gammel og elsker hest. Foreldrene mine er veldig snille og jeg er veldig glad i de. Her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer her er mer tekst her er mer tekst her er mer tekst her her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst her er mer tekst er mer tekst her er mer tekst her er mer tekst tekst her er mer tekst</p>
-    <img  src="Shetland_pony_moult1.jpg" alt="Hest som løper på regnbue" class="gif">
+    
+<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>    
+	<img  src="Shetland_pony_moult1.jpg" alt="Hest som løper på regnbue" class="gif">
     <p> Ponni er betegnelse på en småvokst hestetype med en mankehøyde på opp til 148 cm. Ponnier deles inn i kategoriene 1-4, hvor kategori 1 er de høyeste. </p>
 </div>
 <div id="fav" class="col-small-40 col-small-20"> <h1 style="color: brown"> Mine favorittnettsider</h1>
-    <h2> Her er en liste over mine favorittnettsider</h2>
+    <h4> Her er en liste over mine favorittnettsider:</h4>
     <ul class="vanlig">
         <li> <a href="https://no.wikipedia.org/wiki/Hest">Wikipedia om hest</a> </li>
         <li> <a href="https://snl.no/hest"> SNL om hest </a></li>
